<resources>
    <string name="app_name">FPMemory</string>

    <string name="action_settings">Settings</string>

    <string name="btn_rate">心率管理</string>
    <string name="btn_weight">体重管理</string>
    <string name="btn_pressure">血压管理</string>
    <string name="btn_sports">运动管理</string>

    <string name="tab_menu_sports">运动</string>
    <string name="tab_menu_health">健康</string>
    <string name="tab_menu_find">发现</string>
    <string name="tab_menu_me">我的</string>
    <string name="title_activity_weight_content">体重管理</string>

    <string name="tab_health_heartrate">心率</string>
    <string name="tab_health_bloodpressure">血压</string>
    <string name="tab_health_bloodoxygen">血氧</string>
    
    <string name="item_sports_pace">步速</string>
    <string name="item_sports_stride">步幅</string>
    <string name="item_sports_gait">步态</string>

    <string name="item_sports_history">历史运动强度</string>
    <string name="item_sports_finished">已完成运动项目</string>
    <string name="item_sports_nonfinished">未完成运动项目</string>

    <string name="tv_rate_average">平均</string>
    <string name="tv_rate_max">最高</string>
    <string name="tv_rate_min">最低</string>

</resources>
