<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.3">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/recover" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_rate"
            android:text="@string/btn_rate"
            style="@style/btn_recover_item"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_weight"
            android:text="@string/btn_weight"
            style="@style/btn_recover_item"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_sports"
            android:text="@string/btn_sports"
            style="@style/btn_recover_item"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_pressure"
            android:text="@string/btn_pressure"
            style="@style/btn_recover_item"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>