<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/ly_top_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_topbar">

        <TextView
            android:id="@+id/txt_topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="足际"
            android:textColor="@color/text_topbar"
            android:textSize="25sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_alignParentBottom="true"
            android:background="@color/div_white" />

    </RelativeLayout>


    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_sports"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_sports"
            android:text="@string/tab_menu_sports" />

        <RadioButton
            android:id="@+id/rb_health"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_health"
            android:text="@string/tab_menu_health" />

        <RadioButton
            android:id="@+id/rb_find"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_find"
            android:text="@string/tab_menu_find" />

        <RadioButton
            android:id="@+id/rb_me"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_me"
            android:text="@string/tab_menu_me" />

    </RadioGroup>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_above="@id/rg_tab_bar"
        android:background="@color/div_gray" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/div_tab_bar"
        android:layout_below="@id/ly_top_bar" />


</RelativeLayout>
