<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/ly_top_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_topbar">

        <TextView
            android:id="@+id/txt_topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/btn_rate"
            android:textColor="@color/text_topbar"
            android:textSize="25sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_alignParentBottom="true"
            android:background="@color/div_white" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.3">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="211dp"
            android:background="@mipmap/rate" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/tab_rate_bg"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                style="@style/tb_rate_item"
                android:text="@string/tv_rate_average"
                android:textColor="@color/text_white"
                android:textStyle="bold" />

            <TextView
                style="@style/tb_rate_item"
                android:text="@string/tv_rate_max"
                android:textColor="@color/text_white"
                android:textStyle="bold" />

            <TextView
                style="@style/tb_rate_item"
                android:text="@string/tv_rate_min"
                android:textColor="@color/text_white"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            >

            <TextView
                android:text="65bmp"
                style="@style/tb_rate_item"
                android:textColor="@color/text_gray"/>

            <TextView
                android:text="120bmp"
                style="@style/tb_rate_item"
                android:textColor="@color/text_gray"/>

            <TextView
                android:text="45bmp"
                style="@style/tb_rate_item"
                android:textColor="@color/text_gray"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp">

            <TextView
                style="@style/tb_rate_item"
                android:text="15:20"
                android:textColor="@color/text_gray" />

            <TextView
                style="@style/tb_rate_item"
                android:text=""
                android:textColor="@color/text_gray" />

            <TextView
                style="@style/tb_rate_item"
                android:text="121bmp"
                android:textColor="@color/text_gray"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp">

            <TextView
                style="@style/tb_rate_item"
                android:text="15:22"
                android:textColor="@color/text_gray" />

            <TextView
                style="@style/tb_rate_item"
                android:text=""
                android:textColor="@color/text_gray" />

            <TextView
                style="@style/tb_rate_item"
                android:text="110bmp"
                android:textColor="@color/text_gray" />
        </TableRow>
    </TableLayout>

</LinearLayout>